--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,5 +30,6 @@
       ]
     }
   ],
-  "ignorePatterns": ["dist", "node_modules"]
+  "ignorePatterns": ["dist", "node_modules"],
+  "comma-dangle": ["error", "always"]
 }
