--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open",
+    "start": "cross-env NODE-ENV=development webpack-dev-server --open",
     "build:dev": "cross-env NODE_ENV=development webpack --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --progress",
-    "build": "webpack"
+    "build": "webpack",
+    "jesttest": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.20.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.5",
+    "@types/jest": "^29.2.5",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "babel-loader": "^8.2.5",
@@ -45,15 +47,18 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "msw": "^0.49.2",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
@@ -63,5 +68,8 @@
     "@types/lodash": "^4.14.188",
     "lodash": "^4.17.21",
     "react-hls-player": "^3.0.7"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
