--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE-ENV=development webpack-dev-server --open",
+    "start": "webpack-dev-server --open",
+    "start:prod": "cross-env NODE_ENV=production webpack-dev-server --open",
     "build:dev": "cross-env NODE_ENV=development webpack --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --progress",
+    "analyze": "webpack-bundle-analyzer ./build/bundle-report.json --default-sizes gzip",
     "build": "webpack",
     "jesttest": "jest"
   },
@@ -48,9 +50,10 @@
     "eslint-plugin-react": "^7.31.10",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
-    "mini-css-extract-plugin": "^2.6.1",
+    "mini-css-extract-plugin": "^2.7.2",
     "msw": "^0.49.2",
     "prettier": "^2.7.1",
+    "process": "^0.11.10",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
@@ -60,12 +63,15 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-manifest-plugin": "^5.0.0"
   },
   "dependencies": {
     "@types/lodash": "^4.14.188",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^6.0.0",
     "lodash": "^4.17.21",
     "react-hls-player": "^3.0.7"
   },
